# rust-pg-listener

./: .env  Cargo.toml  docker-compose.yaml  justfile  test.sql
migrations/: 20230513112431_events.up.sql
src/: main.rs
